fix some parts on tablet

--- a/src/parts/section/section.scss
+++ b/src/parts/section/section.scss
@@ -35,6 +35,9 @@
     @media (min-width: 768px) {
       width: 33.33%;
       min-width: 33.33%;
+      padding-right: 20px;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
   }
   &__image {
