--- a/src/stylesheets/footer.scss
+++ b/src/stylesheets/footer.scss
@@ -3,9 +3,7 @@
   @media (min-width: 1024px) {
     padding-top: 220px;
   }
-  @media (min-width: 768px) {
-    min-height: max(1000px, 100vh);
-  }
+  padding-bottom: 20px;
   &__marque {
     width: 100%;
     overflow: hidden;
@@ -45,8 +43,16 @@
     width: 100%;
     @media (min-width: 768px) {
       width: 50%;
-      padding-left: 20px;
-      padding-right: 20px;
+    }
+    &--left {
+      @media (min-width: 768px) {
+        padding-right: 10px;
+      }
+    }
+    &--right {
+      @media (min-width: 768px) {
+        padding-left: 10px;
+      }
     }
     @media (min-width: 1024px) {
       width: 33.33%;
@@ -62,6 +68,7 @@
     line-height: 1;
     display: none;
     align-items: flex-end;
+    margin-bottom: 3px;
     svg {
       width: 33.85px;
       height: 32.16px;
