--- a/src/stylesheets/gentle-underline.scss
+++ b/src/stylesheets/gentle-underline.scss
@@ -1,7 +1,7 @@
 .gentle-underline {
   position: relative;
   text-decoration: underline;
-  @media (min-width: 768px) {
+  @media (min-width: 1024px) {
     white-space: nowrap;
     text-decoration: none;
   }
@@ -14,7 +14,7 @@
     height: 2px;
     background-color: var(--black);
     display: none;
-    @media (min-width: 768px) {
+    @media (min-width: 1024px) {
       display: block;
       height: 3px;
     }
